// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > schema > getSchema > audit > expected call 1`] = `
{
  "active": true,
  "createdAt": 2023-07-28T10:50:00.928Z,
  "description": "This is a description of the schema.",
  "hidden": false,
  "id": "example-model-schema-1",
  "jsonSchema": {
    "properties": {
      "overview": {
        "description": "Summary of the model functionality.",
        "properties": {
          "name": {
            "description": "This should be descriptive name, such as 'Arabic - English Translation', and will be visible in the model marketplace.",
            "maxLength": 140,
            "minLength": 1,
            "title": "Name of the Machine Learning Model",
            "type": "string",
            "widget": "customTextInput",
          },
        },
        "title": "Overview",
        "type": "object",
      },
    },
  },
  "kind": "model",
  "name": "Example Schema 1",
  "updatedAt": 2023-07-28T10:50:00.928Z,
}
`;

exports[`routes > schema > getSchema > returns the schema with the matching ID 1`] = `
{
  "schema": {
    "active": true,
    "createdAt": "2023-07-28T10:50:00.928Z",
    "description": "This is a description of the schema.",
    "hidden": false,
    "id": "example-model-schema-1",
    "jsonSchema": {
      "properties": {
        "overview": {
          "description": "Summary of the model functionality.",
          "properties": {
            "name": {
              "description": "This should be descriptive name, such as 'Arabic - English Translation', and will be visible in the model marketplace.",
              "maxLength": 140,
              "minLength": 1,
              "title": "Name of the Machine Learning Model",
              "type": "string",
              "widget": "customTextInput",
            },
          },
          "title": "Overview",
          "type": "object",
        },
      },
    },
    "kind": "model",
    "name": "Example Schema 1",
    "updatedAt": "2023-07-28T10:50:00.928Z",
  },
}
`;

exports[`routes > schema > getSchema > returns the schema with the matching ID 2`] = `
{
  "error": {
    "message": "Schema not found.",
    "name": "Bailo Error",
  },
}
`;
